<resources>
    <string name="app_name">Garage Managment</string>
    <string name="et_singup">¿No estas registrado?</string>
    <string name="btn_sing_up">Registrate</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_user">Usuario</string>
    <string name="helper_user">Debes introducir el usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="repetir_contrasenya">Repetir Contraseña</string>
    <string name="contrasenya">Contraseña</string>
    <string name="phone">Telefono</string>
    <string name="empresa">Empresa</string>
    <string name="email">E-Mail</string>
    <string name="name">Nombre</string>
    <string name="recover">Recuperar Contraseña</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_blank">La contreseña no puede estar vacia</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="user_blank">El Usuario no puede estar vacio</string>
    <string name="tittle_ordenes">Ordenes</string>
    <string name="tittle_vehiculos">Vehiculos</string>
    <string name="tittle_clientes">Clientes</string>
    <string name="tittle_recambios">Recambios</string>
    <string name="anyadir_vehiculo">Añadir vehículo</string>
    <string name="guardar_vehiculo">Guardar vehículo</string>
    <string name="km">Kilometros</string>
    <string name="neumaticos">Neumáticos</string>
    <string name="color_vehiculo">Color</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="bastidor">VIN</string>
    <string name="matricula">Matrícula</string>
    <string name="guardar_cliente">Guardar Cliente</string>
    <string name="telefono">Teléfono</string>
    <string name="cp">Código Postal</string>
    <string name="provincia">Provincia</string>
    <string name="poblacion">Población</string>
    <string name="direccion">Dirección</string>
    <string name="apellido_2">2º Apellido</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="anyadir_cliente">Añadir Cliente</string>
    <string name="guardar_recambio">Guardar Recambio</string>
    <string name="familia">Familia</string>
    <string name="articulo">Articulo</string>
    <string name="referencia">Referencia</string>
    <string name="anyadir_recambio">Añadir Recambio</string>
    <string name="tittle_bucador">Buscador</string>
    <string name="field_null">Revisa los campos, no pueden estar vacios</string>
    <string name="password_weak">La contraseña es muy debil</string>
    <string name="fail_register">No se ha podido registrar</string>
    <string name="error_sesion">Error al iniciar sesión</string>
    <string name="error_change_username">No se  ha podidio actulizar el usuario</string>
    <string name="complete_load">\"Se ha gusrdado en la bse de datos \"</string>
    <string name="no_complete_load">No se ha podida gusrdar en la bse de datos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cerrar_sesion">cerrar_sesion</string>
    <string name="error_add_user_collection">Ha habido un error en la petición</string>
    <string name="email_in_use">El e-mail ya esta en uso</string>
    <string name="action_close">Cerrar Sesión</string>
    <string name="search">" Busqueda"</string>
    <string name="query_dni">Apellido del Cliente</string>
    <string name="vehiculos_fragmnety_title">Vehículos</string>
    <string name="menu_vehiculos">Vehículos</string>
    <string name="menu_clientes">Clientes</string>
    <string name="query_matricula">Matricula</string>
    <string name="menu_recambios">Recambios</string>
    <string name="desdripcion">Descripción del producto</string>
    <string name="query_ref">Referencia</string>
    <string name="menu_vehiculo">Vehiculos</string>
    <string name="menu_guardar_clientes">Insertar nuevo cliente</string>
    <string name="menu_guardar_recambios">Insertar nuevo recambio</string>
    <string name="menu_guardar_vehiculos">Insertar nuevo vehiculo</string>
    <string name="hint_email">E-mail</string>
    <string name="contrasenyas_iguales">Las contraseñas han de ser iguales</string>
    <string name="email_null">El campo email no puede estar vacio</string>
    <string name="password_null">La contraseña no puede estar vacia</string>
    <string name="content_description_logo_de_la_app">Logo de la app</string>
</resources>