<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_Vguide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_Vguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_Hguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/login_et_sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/et_singup"
        app:layout_constraintBottom_toTopOf="@id/login_Hguide90"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_sing_up"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sing_up"
        app:layout_constraintBottom_toTopOf="@id/login_Hguide90"
        app:layout_constraintEnd_toEndOf="@id/login_Vguide90"
        app:layout_constraintStart_toEndOf="@id/login_et_sing_up"
        app:strokeColor="@color/purple_700" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_login"
        app:iconGravity="start"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/login_btn_sing_up"
        app:layout_constraintEnd_toStartOf="@id/login_Vguide90"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_restore"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="180dp"
        android:text="@string/recover_password"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintEnd_toStartOf="@id/login_Vguide90"
        app:layout_constraintStart_toEndOf="@id/login_Vguide10"
        app:layout_constraintTop_toBottomOf="@+id/login_til_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/hint_password"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_700"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintEnd_toEndOf="@id/login_Vguide90"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tie_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_user"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_700"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"

        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/login_til_password"
        app:layout_constraintEnd_toEndOf="@id/login_Vguide90"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tie_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <ImageView

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_korki"
        app:layout_constraintBottom_toTopOf="@+id/login_til_user"
        app:layout_constraintEnd_toStartOf="@+id/login_Vguide90"
        app:layout_constraintStart_toStartOf="@+id/login_Vguide10"
        app:layout_constraintTop_toTopOf="parent" />

   <include

       layout="@layout/my_progres_bar"
       android:id="@+id/progres_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

   </include>

</androidx.constraintlayout.widget.ConstraintLayout>