<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sing_up_guideH9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sing_up_guideV9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sing_up_guideV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:id="@+id/sing_up_llbuttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/sing_up_guideV9"
        app:layout_constraintStart_toEndOf="@id/sing_up_guideV1"
        app:layout_constraintTop_toBottomOf="@id/sing_up_guideH9">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sing_up_btn_cancelar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:padding="3dp"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            app:cornerRadius="15dp"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="3dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sing_up_btn_aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            app:cornerRadius="15dp"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="3dp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_up_til_repetir_contraseña"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/repetir_contrasenya"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/sing_up_llbuttons"
        app:layout_constraintEnd_toStartOf="@id/sing_up_guideV9"
        app:layout_constraintStart_toEndOf="@id/sing_up_guideV1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_up_tie_pass2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_up_til_contraseña"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/contrasenya"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/sing_up_til_repetir_contraseña"
        app:layout_constraintEnd_toStartOf="@id/sing_up_guideV9"
        app:layout_constraintStart_toEndOf="@id/sing_up_guideV1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_up_tie_pass1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_up_til_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/phone"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/sing_up_til_contraseña"
        app:layout_constraintEnd_toStartOf="@id/sing_up_guideV9"
        app:layout_constraintStart_toEndOf="@id/sing_up_guideV1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_up_tie_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_up_til_empresa"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/empresa"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/sing_up_til_phone"
        app:layout_constraintEnd_toStartOf="@id/sing_up_guideV9"
        app:layout_constraintStart_toEndOf="@id/sing_up_guideV1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_up_tie_empresa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_up_til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/sing_up_til_empresa"
        app:layout_constraintEnd_toStartOf="@id/sing_up_guideV9"
        app:layout_constraintStart_toEndOf="@id/sing_up_guideV1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_up_tie_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_up_til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/sing_up_til_email"
        app:layout_constraintEnd_toStartOf="@id/sing_up_guideV9"
        app:layout_constraintStart_toEndOf="@id/sing_up_guideV1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_up_tie_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_korki"
        app:layout_constraintBottom_toTopOf="@id/sing_up_til_name"
        app:layout_constraintEnd_toStartOf="@+id/sing_up_guideV9"
        app:layout_constraintStart_toStartOf="@+id/sing_up_guideV1"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/progres_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </include>


</androidx.constraintlayout.widget.ConstraintLayout>